--- a/css/index.css
+++ b/css/index.css
@@ -38,15 +38,20 @@ body{
     font-family: myfont;
     src: url(../fonts/Ubuntu-Bold.ttf);
 }
+@font-face {
+    font-family: slim;
+    src: url(../fonts/Ubuntu-LightItalic.ttf);
+}
 .nav h1{
+
     font-family:myfont ;
 }
 #cart-icon{
     border-radius: 50%;
 }
 .nav svg{
-    height: 50px;
-    width:  50px;
+    height: 20%;
+    width:  20%;
     margin-left: 20px;
 }
 .nav .log-btn{
@@ -66,10 +71,12 @@ body{
     padding: 10px;    
 }
 .this-is-ur-cart-link{
-    color: #fff;
+    color: var(--special);
 }
 .cart-box{
-    width: 200%;
+    max-height: 60vh;
+    overflow-y: auto;
+    width: 250%;
     position: absolute;
     right: 0%;
     z-index: 100;
@@ -82,10 +89,13 @@ body{
 .cart-box-arr{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .user .cart-box .cart-box-arr .row{
     margin:4px;
-    width: 23%;
+    width: 20%;
+    border-radius: 5px;
     padding: 5px;
     background: var(--special);
     overflow: hidden;
@@ -173,6 +183,7 @@ body{
 #cart-icon{
     position: relative;
 }
+
 .badge{
     color: #fff;
     border-radius: 50%;
@@ -188,13 +199,23 @@ body{
 
 @media screen and (max-width: 768px) and (min-width: 643px) {
     .box { width: 47%; }
-    .cart-box{ width: 180%};
+    .cart-box{ width:200%};
 
 }
 
 @media screen and (max-width: 643px) {
+    .nav h1 { font-size: 16px;}
+    .nav .log-btn { font-family: slim;
+                    font-size: 20px;
+                    letter-spacing: 0px;
+                 }
+    .user span#user-name-icon{padding: 2px;margin: 0;}
     .box { width: 100% }
-    .cart-box { width: 130% }
+    .cart-box{
+            width: 220%;
+            right: 2%;
+            padding: 10px;
+              }
     .user .cart-box .cart-box-arr .row{ width: 45%;}
     .cart-title-box { font-size: 0.8rem; }
 }
